--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/nodemailer": "^7.0.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
