--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
+    "@nestjs/websockets": "^10.4.20",
     "@types/bcrypt": "^6.0.0",
     "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
@@ -48,6 +50,7 @@
     "redis": "^4.6.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
