--- a/package.json
+++ b/package.json
@@ -87,8 +87,8 @@
     "typescript": "^5.1.3"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
