--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "typescript": "^5.1.3"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "20.16.0",
     "npm": ">=9.0.0"
   },
   "jest": {
