--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "typescript": "^5.1.3"
   },
   "engines": {
-    "node": "20.16.0",
+    "node": ">=20.16.0 <22.5.0",
     "npm": ">=9.0.0"
   },
   "jest": {
