--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^10.4.20",
     "@types/bcrypt": "^6.0.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -47,6 +48,7 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "redis": "^4.6.11",
