--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "stripe": "^18.5.0",
+    "twilio": "^5.8.2",
     "typescript": "^5.1.3",
     "uuid": "^9.0.1"
   },
